fixed bug causing timeline div to be collapsed

--- a/styles/content-panel.css
+++ b/styles/content-panel.css
@@ -1,6 +1,6 @@
 
 .page > .content-panel {
-    height: 555px;
+    min-height: 100vh;
     background-color: #fffffff0;
     gap: 0.25em;
     padding: 0.25em 0.25em 6em 0.25em
